Add : 연령, 성별에 따른 인기순 기능 추가 - 반환값 개선

--- a/server/icecreamapp/build.gradle
+++ b/server/icecreamapp/build.gradle
@@ -34,6 +34,9 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 	implementation group: 'org.springframework', name: 'spring-webflux'
+	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '8.1.0'
+
+
 }
 
 tasks.named('test') {
