Add : 회원가입 UI 완성

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
 
     <application
         android:name="com.ssafy.smartstore_jetpack.base.ApplicationClass"
+        android:theme="@style/Base.Theme.Icepop"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -36,10 +37,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Icepop"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:theme="@style/Base.Theme.Icepop"
             android:name=".ui.auth.AuthActivity"
             android:exported="true">
             <intent-filter>
@@ -49,8 +50,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:theme="@style/Base.Theme.Icepop"
             android:name=".ui.MainActivity"
-            android:exported="false"/>
+            android:exported="true"/>
     </application>
 
 </manifest>
