--- a/server/icecreamapp/build.gradle
+++ b/server/icecreamapp/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 	implementation group: 'org.springframework', name: 'spring-webflux'
 	implementation group: 'com.google.firebase', name: 'firebase-admin', version: '8.1.0'
+// https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
 
 
 }
