--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -66,7 +66,16 @@
         <activity
             android:theme="@style/Base.Theme.Icepop"
             android:name=".ui.MainActivity"
-            android:exported="true"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/*" />
+            </intent-filter>
+            <meta-data
+                android:name="android.nfc.action.NDEF_DISCOVERED"
+                android:value="true" />
+        </activity>
     </application>
 
 </manifest>
