--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,24 +4,18 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission
         android:name="android.permission.BLUETOOTH"
         android:maxSdkVersion="30" />
-
     <uses-permission
         android:name="android.permission.BLUETOOTH_ADMIN"
         android:maxSdkVersion="30" />
-
-
     <uses-permission
         android:name="android.permission.BLUETOOTH"
         android:maxSdkVersion="30" />
-
     <uses-permission
         android:name="android.permission.BLUETOOTH_ADMIN"
         android:maxSdkVersion="30" />
-
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" /> <!-- NFC 사용을 위한 허용 -->
@@ -30,13 +24,11 @@
     <uses-feature
         android:name="android.hardware.nfc"
         android:required="true" /> <!-- 서버와의 통신을 위한 Internet 허용 -->
-
     <uses-permission android:name="android.permission.INTERNET" /> <!-- notification 전송 permission -->
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:name="com.ssafy.smartstore_jetpack.base.ApplicationClass"
-        android:theme="@style/Base.Theme.Icepop"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -44,19 +36,38 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Base.Theme.Icepop"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.list.WebViewActivity"
+            android:exported="true"
+            android:theme="@style/Base.Theme.Icepop" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
-        <service android:name=".base.FirebaseMessageService" android:exported="true">
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- 스킴 및 호스트 지정 -->
+                <data
+                    android:scheme="kakaotalk"
+                    android:host="kakaopay" />
+            </intent-filter>
+        </activity>
+
+        <service
+            android:name=".base.FirebaseMessageService"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
         <activity
-            android:theme="@style/Base.Theme.Icepop"
             android:name=".ui.auth.AuthActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Base.Theme.Icepop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -64,14 +75,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:theme="@style/Base.Theme.Icepop"
             android:name=".ui.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Base.Theme.Icepop">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/*" />
             </intent-filter>
+
             <meta-data
                 android:name="android.nfc.action.NDEF_DISCOVERED"
                 android:value="true" />
