--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.SplashActivity"
-            android:exported="false" />
+            android:exported="true" />
 
         <service
             android:name=".base.FirebaseMessageService"
