Fix : gitignore 변경 및 서버 자버 버전 변경

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 bfg-1.14.0.jar
 /server/icecreamapp/src/main/resources/application.properties
+server/icecreamapp/src/main/resources/firebase/firebase_service_key.json
+android/app/google-services.json
